--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ tqdm
 torch --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 torchvision --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 torchaudio --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
+objsize
