--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ torch --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 torchvision --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 torchaudio --pre --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 objsize
+triton
